@@ -241,8 +241,8 @@
       <%= f.check_box :accepted %>
     </div>
     <div class="field">
-      <%= f.label :applicant_number %><br />
-      <%= f.number_field :applicant_number %>
+      <%= f.label :cv_number %><br />
+      <%= f.number_field :cv_number %>
     </div>
 
     <div class="field">
