@@ -30,8 +30,8 @@
   </p>
 
   <p>
-    <b>Applicant number:</b>
-    <%= @applicant.applicant_number %>
+    <b>CV number:</b>
+    <%= @applicant.cv_number %>
   </p>
 
   <p>
